WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12602
XPath functions string(), normalize-space() and string-length() don't work without arguments
https://bugs.webkit.org/show_bug.cgi?id=12602
Summary
XPath functions string(), normalize-space() and string-length() don't work wi...
Alexey Proskuryakov
Reported
2007-02-04 11:42:54 PST
This is another case of Value(bool) ctor being called unexpectedly. I'm really wondering if we should just remove it.
Attachments
proposed fix
(4.69 KB, patch)
2007-02-04 11:59 PST
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2007-02-04 11:59:45 PST
Created
attachment 12922
[details]
proposed fix
Darin Adler
Comment 2
2007-02-04 18:10:29 PST
Comment on
attachment 12922
[details]
proposed fix Maybe we should nip this problem in the bud by getting rid of the Value constructor that takes a bool. Instead that one could be private and we could have a named constructor for making Value from a bool, like Value::fromBool(). r=me
Alexey Proskuryakov
Comment 3
2007-02-04 22:16:15 PST
Committed revision 19399.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug