        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=12602
        XPath functions string(), normalize-space() and string-length() don't work
        without arguments

        Test: fast/xpath/implicit-node-args.html

        * xml/XPathFunctions.cpp:
        (WebCore::XPath::FunString::doEvaluate):
        (WebCore::XPath::FunStringLength::doEvaluate):
        (WebCore::XPath::FunNormalizeSpace::doEvaluate):
        Don't try to pass RefPtr<Node> to the Value ctor.



Canonical link: https://commits.webkit.org/16312@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19399 268f45cc-cd09-0410-ab3c-d52691b4dbfc